Transfered the utility functions to a separated file

--- a/index.html
+++ b/index.html
@@ -35,12 +35,14 @@
 				<div class="boxPortrait">
 					<img id="imgMobPreset" />
 				</div>
+
+				<div id="boxMobHearts"></div>
 				<br/>
 
 				<label for="txtMobPresetName" title="Internal name of your mob.">Preset name:</label>
 				<input type='text' id='txtMobPresetName' /><br/>
 
-				<div id="boxMobHearts"></div>
+				*** SAVE AS PRESET BUTTON ***
 			</div>
 			<div class="box_props" class="clear">
 				<div id="prop_global">
@@ -136,7 +138,7 @@
 
 
 		<div id="boxSpawnerCustomizer"  class="boxGeneric">
-			<b>Spawner parameters:</b><br/>
+			<b>SPAWNER PARAMETERS</b><br/>
 
 			<label for="txtSPWSpawnCount" title="Max amount of mobs per spawn" class="formLabel">SpawnCount:</label>
 			<input type='text' id='txtSPWSpawnCount' /> <br/>
@@ -170,7 +172,7 @@
 
 
 
-		<button id="btDebug">TEST (create command)</button>
+		<button id="btDebug">TEMP BUTTON</button>
 
 
 
@@ -183,6 +185,7 @@
 	</footer>
 
 
+	<script type="text/javascript" src="assets/js/utility.js"></script>
 	<script type="text/javascript" src="assets/js/objects.js"></script>
 	<script type="text/javascript" src="assets/js/main.js"></script>
 </body>
